<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/dialog_add_folder"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="12dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/folder_name"
        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/dialog_add_text_note"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="12dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/note_name"
        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/dialog_add_cross_note"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="12dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/crossnote_name"
        android:background="@drawable/rounded_button"/>
    <Button
        android:id="@+id/dialog_add_audio"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="12dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/audio_name"
        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/dialog_add_image"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="12dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/image_name"
        android:background="@drawable/rounded_button"/>

</LinearLayout>