<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/calendar_image"/>

                <TextView
                    android:id="@+id/calendar_txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="210dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="Year"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/calendar_txtDateDay"                       android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="210dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@+id/calendar_txtDate"
                    android:text="Day"
                    android:textColor="#000"
                    android:textSize="50sp"
                    android:textStyle="bold" />
                <ImageButton
                    android:id="@+id/calendar_btn_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ic_calendar_back"
                    android:layout_marginTop="60dp"
                    />
                <ImageButton
                    android:id="@+id/calendar_btn_next"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/calendar_btn_back"
                    android:background="@drawable/ic_calendar_next"
                    android:layout_marginTop="60dp"
                    />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/calendar_header"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="#222222"
                    android:text="@string/calendar_mon"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="#222222"
                    android:text="@string/calendar_tue"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="#222222"
                    android:text="@string/calendar_wen"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="#222222"
                    android:text="@string/calendar_thu"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="#222222"
                    android:text="@string/calendar_fri"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="#222222"
                    android:text="@string/calendar_sat"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="#222222"
                    android:text="@string/calendar_sun"/>
            </LinearLayout>

            <!-- days view -->
            <GridView
                android:id="@+id/calendar_grid"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:numColumns="7"/>

            <TextView
                android:id="@+id/calendar_txt_events_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/events_title"
                android:textColor="#000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calendar_events_recyler_view"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/calendar_floating_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="25dp"
            android:backgroundTint="#FFF"
            android:clickable="true"
            android:focusable="true"
            android:onClick="showAddEventMenu"
            android:src="@drawable/ic_add_plus_button"
            app:backgroundTint="#FFF"
            app:elevation="10dp" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>